updated background research

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -18,6 +18,16 @@
     YEAR      = {2007}
 }
 
+@ARTICLE{herlocker04,
+    AUTHOR    = {Herlocker, J. L. and Konstan, J. A. and Terveen, L. G. and Riedl, J. T.},
+    TITLE     = {Evaluating collaborative filtering recommender systems},
+    JOURNAL   = {ACM Transactions on Information Systems},
+    VOLUME    = {22},
+    NUMBER    = {1},
+    PAGES     = {5--53},
+    YEAR      = {2004}
+}
+
 @ARTICLE{linden03,
     AUTHOR    = {Linden, Greg and Smith, Brent and York, Jeremy},
     TITLE     = {Amazon.com recommendations: Item-to-item collaborative filtering},
